about and Header sections spacing fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,6 +81,10 @@
 /*  font-size: 20px*/
 /*}*/
 
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
 
 .splitrow {
    /*box-sizing: border-box;*/
